pragma solidity ^0.8.2;

import "../../openzeppelin-contracts-upgradeable/contracts/access/AccessControlUpgradeable.sol";
//import "@openzeppelin/contracts-upgradeable/access/AccessControlUpgradeable.sol";

abstract contract AuthorizationModule is AccessControlUpgradeable {
}