@startuml

' ERC721 <|-- CMTAT

abstract Initializable

abstract ContextUpgradeable
Initializable <|-- ContextUpgradeable

abstract BaseModule
Initializable <|-- BaseModule
ERC20Upgradeable <|-- BaseModule

abstract AuthorizationModule
AccessControlUpgradeable <|-- AuthorizationModule

abstract PauseModule
Initializable <|-- PauseModule
PausableUpgradeable <|-- PauseModule

abstract MintModule

abstract BurnModule
Initializable <|-- BurnModule

abstract EnforcementModule
Initializable <|-- EnforcementModule
ContextUpgradeable <|-- EnforcementModule
ERC20Upgradeable <|-- EnforcementModule

abstract ValidationModule
Initializable <|-- ValidationModule
ContextUpgradeable <|-- ValidationModule

abstract MetaTxModule
ERC2771ContextUpgradeable <|-- MetaTxModule

abstract SnapshotModule
Initializable <|-- SnapshotModule
ContextUpgradeable <|-- SnapshotModule
ERC20Upgradeable <|-- SnapshotModule


IERC20Upgradeable <|-- ERC20Upgradeable
Initializable <|-- ERC20Upgradeable
ContextUpgradeable <|-- ERC20Upgradeable
IERC20MetadataUpgradeable <|-- ERC20Upgradeable

IERC20Upgradeable <|-- IERC20MetadataUpgradeable

Initializable <|-- CMTAT
ContextUpgradeable <|-- CMTAT
BaseModule <|-- CMTAT
AuthorizationModule <|-- CMTAT
PauseModule <|-- CMTAT
MintModule <|-- CMTAT
BurnModule <|-- CMTAT
EnforcementModule <|-- CMTAT
ValidationModule <|-- CMTAT
MetaTxModule <|-- CMTAT
SnapshotModule <|-- CMTAT

CMTAT : burnFrom(address account, uint256 amount)

BaseModule : transferFrom(address sender, address recipient, uint256 amount)

ERC20Upgradeable : totalSupply()
ERC20Upgradeable : balanceOf(address account)
ERC20Upgradeable : transfer(address recipient, uint256 amount)
ERC20Upgradeable : allowance(address owner, address spender)
ERC20Upgradeable : approve(address spender, uint256 amount)
ERC20Upgradeable : transferFrom(address sender, address recipient, uint256 amount)


@enduml
